force-app/main/default/objects/Transporter__c/Transporter__c.object-meta.xml
<CustomObject>
    <label>Transporter</label>
    <nameField>
        <label>Transporter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transportes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>