force-app/main/default/objects/Transporter__c/fields/Mobile_Num__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Num__c</fullName>
    <label>Mobile Num</label>
    <type>Phone</type>
</CustomField>