force-app/main/default/objects/Transporter__c/fields/Service_Cites__c.field-meta.xml
<CustomField>
    <fullName>Service_Cites__c</fullName>
    <label>Service Cites</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hyedrabad</fullName>
            </value>
            <value>
                <fullName>Banglore</fullName>
            </value>
            <value>
                <fullName>Chennai</fullName>
            </value>
            <value>
                <fullName>Mumbai</fullName>
            </value>
            <value>
                <fullName>Vizag</fullName>
            </value>
            <value>
                <fullName>Pune</fullName>
            </value>
            <value>
                <fullName>Delhi</fullName>
            </value>
            <value>
                <fullName>Goa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>