force-app/main/default/objects/Transporter__c/fields/Transporter_Code__c.field-meta.xml
<CustomField>
    <fullName>Transporter_Code__c</fullName>
    <label>Transporter Code</label>
    <type>AutoNumber</type>
</CustomField>