force-app/main/default/objects/Transporter__c/fields/Vechicle_Type__c.field-meta.xml
<CustomField>
    <fullName>Vechicle_Type__c</fullName>
    <label>Vechicle Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>